--- a/css/styles.css
+++ b/css/styles.css
@@ -1,39 +1,209 @@
 /* 
 Текст:
-кольор основного тексту - #757575 (світло-сірий);
-кольор заголовків - #212121 (темно-сірий); 
-кольори тексту лого #2196F3 (синій), #000000 (чорний)
+кольор основного тексту/primary-text-color - #757575 (світло-сірий);
+кольор заголовків/title-text-color - #212121 (темно-сірий); 
+кольори тексту лого/logo-text-color-blue #2196F3 (синій), 
+logo-text-color-black #000000 (чорний)
 додатковий текст - #FFFFFF (білий)
 
 Сторінка: 
-Основний кольор - #F5F5F5 (білий)
-Додатковий кольор - #2F303A (темно-сірий)
-кольор секції 2 (Наша команда) - #F5F4FA*/
+Основний кольор/main-page-color - #F5F5F5 (білий)
+Додатковий кольор/additional-page-color - #2F303A (темно-сірий)
+кольор секції 2 (Наша команда)/section-two-colo - #F5F4FA*/
 
-.page {
-  color: #757575;
-  background-color: #f5f5f5;
+:root {
+  --primary-text-color: #757575;
+  --title-text-color: #212121;
+  --logo-text-color-blue: #2196f3;
+  --logo-text-color-black: #000000;
+  --additional-text-color: #ffffff;
+
+  --main-page-color: #f5f5f5;
+  --additional-page-color: #2f303a;
+  --section-two-color: #f5f4fa;
+  --contact-details-color: rgba(255, 255, 255, 0.6);
 }
 
-.logo {
-  color: #000000;
-}
-.logo span {
-  color: #2196f3;
-}
-
-.main-header {
-  color: #ffffff;
-}
-
-.address {
-  color: #ffffff;
-}
-
-.headers {
-  color: #212121;
+body {
+  color: var(--primary-text-color);
+  background-color: var(--main-page-color);
+  font-family: "Roboto", sans-serif;
+  letter-spacing: 0.03em;
 }
 
 .list {
   list-style-type: none;
+}
+
+.headers {
+  color: var(--title-text-color);
+}
+
+.section-header {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  color: var(--title-text-color);
+}
+
+/* Шапка */
+
+.logo {
+  color: var(--logo-text-color-black);
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+}
+.logo span {
+  color: var(--logo-text-color-blue);
+}
+
+/* Site-nav */
+.site-nav .current {
+  color: var(--logo-text-color-blue);
+}
+.site-nav a {
+  color: var(--title-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+}
+.site-nav a:hover,
+.site-nav a:focus {
+  color: var(--logo-text-color-blue);
+}
+
+/* Контакти */
+
+.contacts a {
+  color: var(--primary-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+}
+.contacts a:hover,
+.contacts a:focus {
+  color: var(--logo-text-color-blue);
+}
+
+/* Розділи */
+/* Герой */
+.hero {
+  letter-spacing: 0.06em;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36x;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: var(--additional-page-color);
+}
+
+.hero button[type="button"] {
+  color: var(--additional-text-color);
+  background-color: var(--logo-text-color-blue);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  text-align: center;
+  letter-spacing: 0.06em;
+}
+.hero-header {
+  color: var(--additional-text-color);
+}
+
+/* Наші переваги */
+
+.advantages-headers {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: var(--title-text-color);
+}
+
+.advantages-par {
+  font-size: 14px;
+  line-height: 1.7;
+}
+
+/* Чим ми займаємося */
+
+/* Наша команда */
+.team {
+  background-color: var(--section-two-color);
+}
+
+.team .headers {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+}
+
+.team-par {
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+}
+
+/* ----------------ПОРТФОЛІО (початок)---------- */
+.projects .headers {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.projects-par {
+  font-size: 16px;
+  line-height: 1.88;
+}
+/* ----------------ПОРТФОЛІО (кінець)---------- */
+
+/* Footer */
+.footer {
+  background-color: var(--additional-page-color);
+}
+.address {
+  color: var(--additional-text-color);
+  text-decoration: none;
+}
+
+.address:hover,
+.address:focus {
+  color: var(--logo-text-color-blue);
+}
+
+.contact-details a {
+  color: var(--contact-details-color);
+  text-decoration: none;
+}
+.contact-details a:hover,
+.contact-details a:focus {
+  color: var(--logo-text-color-blue);
+}
+
+/* Button */
+button[type="button"] {
+  color: var(--title-text-color);
+  background-color: var(--section-two-color);
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: inherit;
+  text-align: center;
+  border: none;
+}
+button[type="button"]:hover {
+  color: var(--additional-text-color);
+  background-color: var(--logo-text-color-blue);
 }
