--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,6 @@ body {
 }
 
 .section-header {
-  font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
@@ -82,7 +81,7 @@ body {
 /* Контакти */
 
 .contacts a {
-  color: var(--primary-text-color);
+  color: inherit;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -100,7 +99,7 @@ body {
   letter-spacing: 0.06em;
   font-weight: 900;
   font-size: 44px;
-  line-height: 1.36x;
+  line-height: 1.36;
   text-align: center;
   text-transform: uppercase;
   background-color: var(--additional-page-color);
@@ -122,7 +121,6 @@ body {
 /* Наші переваги */
 
 .advantages-headers {
-  font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
@@ -156,7 +154,6 @@ body {
 
 /* ----------------ПОРТФОЛІО (початок)---------- */
 .projects .headers {
-  font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
@@ -206,4 +203,5 @@ button[type="button"] {
 button[type="button"]:hover {
   color: var(--additional-text-color);
   background-color: var(--logo-text-color-blue);
+  cursor: pointer;
 }
